# praval_deep_research

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  README.md  STORAGE_ENHANCEMENT_TEST_RESULTS.md  USER_MANUAL.md  agentic_deep_research_systems.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  temp_git_setup.sh  test_qa_fix.py  test_qa_quality.py  test_vajra_integration.py
.github/workflows/: ci.yml  pre-commit-check.yml  release.yml
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: README.md
desktop/src-tauri/src/: commands.rs  config.rs  main.rs  sidecar.rs
docker/: Dockerfile.agents  Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend-new  entrypoint-api.sh  nginx-frontend-new.conf  nginx.conf  postgres_init.sql  prometheus.yml  qdrant_config.yaml  rabbitmq.conf
frontend/: app.js  discover-app.js  discover.html  index.html  kb-app.js  knowledge-base.html  package.json
frontend-new/: index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend-new/src/: App.simple.tsx  App.test.tsx  App.tsx  index.css
frontend-new/src/components/: IndexingStatus.tsx  RelatedPapersModal.tsx
frontend-new/src/components/content/: ContentGeneratorModal.tsx
frontend-new/src/components/discover/: HybridAlphaSlider.test.tsx  HybridAlphaSlider.tsx  SearchModeToggle.test.tsx  SearchModeToggle.tsx
frontend-new/src/components/insights/: ResearchInsights.tsx
frontend-new/src/config/: voice.config.ts
frontend-new/src/hooks/: useIndexingStatus.ts  useVoiceInterface.ts
frontend-new/src/pages/: Chat.tsx  Discover.tsx  KnowledgeBase.tsx  Settings.tsx
frontend-new/src/services/api/: client.ts
frontend-new/src/store/: useAppStore.ts  useChatStore.ts
frontend-new/src/types/: index.ts  insights.ts
plans/: DESKTOP_APP_PLAN.md  pdf-upload.md  vajra-migration.md
scripts/: build-all.sh  build-backend-binary.sh  clean.sh  deploy.sh  docker-manage.sh  format.sh  init_vajra_indexes.py  install-linux.sh  install-macos.sh  install-windows.ps1  lint.sh  migrate_to_local_storage.sh  stop.sh  test.sh  test_e2e.sh  test_paper_discovery.py  verify_storage.sh
src/: rabbitmq_consumer.py  run_agents.py
src/agentic_research/: __init__.py
src/agentic_research/agents/: __init__.py
src/agentic_research/api/: __init__.py  embedded_main.py  main.py
src/agentic_research/api/routes/: __init__.py  config.py  health.py  kb_search.py  knowledge_graph.py  research.py  sse.py
src/agentic_research/core/: __init__.py  config.py  messaging.py
src/agentic_research/db/: __init__.py  base.py  models.py
src/agentic_research/db/migrations/: 002_thread_based_branching.sql  add_branching_columns.sql
src/agentic_research/extraction/: __init__.py  examples.py  langextract_processor.py  schemas.py
src/agentic_research/messaging/: __init__.py  rabbitmq_bridge.py
src/agentic_research/storage/: __init__.py  bm25_index_manager.py  conversation_index.py  conversation_store.py  embeddings.py  hybrid_search.py  kg_client.py  minio_client.py  paper_index.py  pg_conversation_store.py  qdrant_client.py  vector_search.py
src/agentic_research/storage/embedded/: __init__.py  cache_store.py  config.py  message_queue.py  storage_client.py  vector_db.py
src/agents/: __init__.py
src/agents/interaction/: __init__.py  content_generator.py  qa_specialist.py  research_advisor.py
src/agents/research/: __init__.py  citation_extractor.py  document_processor.py  kb_search_agent.py  linked_paper_indexer.py  paper_discovery.py  paper_summarizer.py  semantic_analyzer.py  summarization.py
src/processors/: __init__.py  arxiv_client.py  pdf_processor.py
src/tools/: __init__.py  list_knowledge_base.py  search_conversations.py  search_paper_chunks.py
tests/: conftest.py  test_storage_enhancement.py
tests/integration/: test_paper_discovery_workflow.py  test_praval_agent_flow.py  test_research_advisor_with_pg.py
tests/unit/: test_core_config.py
tests/unit/test_agents/: test_context_engineering_agents.py  test_praval_agents.py  test_research_agent.py
tests/unit/test_api/: __init__.py  test_insights_performance.py  test_kb_filters.py  test_kb_search.py  test_main.py  test_models.py  test_notifications.py
tests/unit/test_messaging/: test_rabbitmq_bridge.py
tests/unit/test_storage/: test_bm25_manager.py  test_context_engineering.py  test_embeddings.py  test_hybrid_search.py  test_pg_conversation_store.py  test_vector_search.py  test_vector_search_client.py
tests/unit/test_tools/: __init__.py  test_arxiv_client.py  test_search_conversations.py
